--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -79,18 +79,24 @@ h2 {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
+.card:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 0 15px rgba(28, 212, 0, 0.5);
+}
 
 #home .card {
     padding: 1%;
     display: flex;
     align-items: center;
     flex-direction: column;
+    margin-left: 100px;
+    margin-right: 100px;
 }
-
-.card:hover {
-    transform: scale(1.05);
+#home .card:hover {
+    transform: scale(1.03);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 0 15px rgba(28, 212, 0, 0.5);
 }
+
+
 
 /* SECCIÓN CON LAS IMÁGENES */
 .images {
@@ -115,6 +121,10 @@ h2 {
     height: 100%;
     border-radius: 10%;
     object-fit: cover;
+}
+
+#gallery .card:hover {
+    transform: scale(1.08);
 }
 
 /* SECCIÓN CONTACTO */
