--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -159,7 +159,7 @@ h2 {
 }
 
 #contact form textarea {
-    height: 150px; /* Ajusta esta altura según tus necesidades */
+    height: 150px; 
     resize: none;
 }
 
